--- a/templates/accounts/account/signup.html
+++ b/templates/accounts/account/signup.html
@@ -20,6 +20,16 @@
                             <p>Already have an account? Please <a href="{% url 'two_factor:login' %}"><b>sign in</b></a>
                                 instead.</p>
                             {% csrf_token %}
+                            {% if form.non_field_errors %}
+                                <div role="alert" class="alert alert-primary">
+                                    {{ form.non_field_errors }}
+                                    <div class="small ms-2">Unable to register? Contact <a
+                                            href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
+                                        for help.
+                                    </div>
+                                </div>
+
+                            {% endif %}
                             {% for field in form %}
                                 {% if field.errors %}
                                     <div class="text-danger">
