--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -17,12 +17,12 @@
                         height="35px" alt="nci-logo"></a>
             </div>
             <div class="d-xl-none d-inline-block">
-                <button class="d-xl-none d-inline-block btn me-3 collapsed" type="button" id="SearchBarCollapse"
-                        data-bs-toggle="collapse"
-                        data-bs-target=".ctb-search-bar-collapsible"
-                        aria-label="Toggle search bar">
-                    <i class="fas fa-search"></i>
-                </button>
+{#                <button class="d-xl-none d-inline-block btn me-3 collapsed" type="button" id="SearchBarCollapse"#}
+{#                        data-bs-toggle="collapse"#}
+{#                        data-bs-target=".ctb-search-bar-collapsible"#}
+{#                        aria-label="Toggle search bar">#}
+{#                    <i class="fas fa-search"></i>#}
+{#                </button>#}
                 <button class="navbar-toggler border-0 btn collapsed" type="button" id="navbarSideCollapse"
                         data-bs-toggle="collapse"
                         data-bs-target="#ctb-collapsible-navbar"
@@ -59,14 +59,14 @@
                     </li>
                 </ul>
                 <div class="navbar-nav">
-                    <li class="nav-item d-none d-xl-inline-block">
-                        <a class="nav-link btn me-3 collapsed" type="button" id="SearchBarCollapse2"
-                           data-bs-toggle="collapse"
-                           data-bs-target=".ctb-search-bar-collapsible"
-                           aria-label="Toggle search bar">
-                            <i class="fas fa-search"></i>
-                        </a>
-                    </li>
+{#                    <li class="nav-item d-none d-xl-inline-block">#}
+{#                        <a class="nav-link btn me-3 collapsed" type="button" id="SearchBarCollapse2"#}
+{#                           data-bs-toggle="collapse"#}
+{#                           data-bs-target=".ctb-search-bar-collapsible"#}
+{#                           aria-label="Toggle search bar">#}
+{#                            <i class="fas fa-search"></i>#}
+{#                        </a>#}
+{#                    </li>#}
                     {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle {% if 'users/' in request.path or 'account' in request.path %} active {% endif %}"
