page title: CTB --> Chernobyl Tissue Bank

--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    CTB | About the CTB
+    Chernobyl Tissue Bank | About the CTB
 {% endblock %}
 
 {% block description %}
@@ -174,7 +174,7 @@
                         </div>
                         <div>
                             <div class="">For more information, please visit:</div>
-                            <div class="pb-3"><a target="_blank" rel="noopener noreferrer" href="https://dceg.cancer.gov/"><i
+                            <div class="pb-3"><a target="_blank" rel="noopener noreferrer" href="https://dceg.cancer.gov/tools/public-data/chernobyl-tissue-bank"><i
                                     class="fas fa-globe me-2"></i> Division of Cancer Epidemiology and Genetics (DCEG),
                                 NCI</a></div>
                         </div>
