--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    CTB | Contact Us
+    Chernobyl Tissue Bank | Contact Us
 {% endblock %}
 
 {% block description %}
