--- a/templates/ctb/ctb_search.html
+++ b/templates/ctb/ctb_search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    CTB | Keyword Search Results
+    Chernobyl Tissue Bank | Keyword Search Results
 {% endblock %}
 
 {% block description %}
