--- a/templates/ctb/privacy.html
+++ b/templates/ctb/privacy.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    CTB|Privacy Policy
+    Chernobyl Tissue Bank |Privacy Policy
 {% endblock %}
 
 {% block description %}
