--- a/templates/ctb/research.html
+++ b/templates/ctb/research.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    CTB | Research and CTB Data Access
+    Chernobyl Tissue Bank | Research and CTB Data Access
 {% endblock %}
 
 {% block description %}
