--- a/templates/ctb/research_projects.html
+++ b/templates/ctb/research_projects.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    CTB | Research Projects Using CTB Materials
+    Chernobyl Tissue Bank | Research Projects Using CTB Materials
 {% endblock %}
 
 {% block description %}
