--- a/templates/donors/application_form.html
+++ b/templates/donors/application_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    CTB | Application Form
+    Chernobyl Tissue Bank | Application Form
 {% endblock %}
 
 {% block description %}
