--- a/templates/donors/clinical_search_facility.html
+++ b/templates/donors/clinical_search_facility.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    CTB | Clinical Search Facility
+    Chernobyl Tissue Bank | Clinical Search Facility
 {% endblock %}
 
 {% block description %}
