--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load donors_custom_tags %}
 {% block title %}
-    CTB | Clinical Search Facility Result
+    Chernobyl Tissue Bank | Clinical Search Facility Result
 {% endblock %}
 
 {% block description %}
