--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/dataTables.bootstrap.min.css" %}">{% endblock %}
 
 {% block title %}
-    CTB | Dashboard
+    Chernobyl Tissue Bank | Dashboard
 {% endblock %}
 
 {% block description %}
