--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    CTB | Oncogenic Driver Search Facility
+    Chernobyl Tissue Bank | Oncogenic Driver Search Facility
 {% endblock %}
 
 {% block description %}
