--- a/templates/donors/saved_searches.html
+++ b/templates/donors/saved_searches.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/dataTables.bootstrap.min.css" %}">{% endblock %}
 
 {% block title %}
-    CTB | My Saved Searches
+    Chernobyl Tissue Bank | My Saved Searches
 {% endblock %}
 
 {% block description %}
