--- a/templates/donors/search_tissue_samples.html
+++ b/templates/donors/search_tissue_samples.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load donors_custom_tags %}
 {% block title %}
-    CTB | Search Tissue Samples
+    Chernobyl Tissue Bank | Search Tissue Samples
 {% endblock %}
 
 {% block description %}
