password_change and signup.html to include the minimum password requirements

--- a/templates/accounts/account/signup.html
+++ b/templates/accounts/account/signup.html
@@ -53,7 +53,8 @@
                                 </label>
                             </div>
                             <div class="small fst-italic fw-light mt-2 bg-light p-2 rounded-2">
-                                This password must contain at least one each of the following:
+                                This password must be at least 16 characters and must contain at least one each of the
+                                following:
                                 <ul>
                                     <li>a lower-case letter</li>
                                     <li>an upper-case letter</li>
