setup smtp to sending email

--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            {% blocktrans %}Please <a href="mailto:ctb-support@isb-cgc.org">contact us</a> if you have
+                            {% blocktrans %}Please <a href="mailto:nciwebtools@gmail.com">contact us</a> if you have
                                 trouble resetting your password.{% endblocktrans %}
                         </div>
                     </div>
