--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -39,7 +39,7 @@
                     <hr>
                     <div>
                         <div class="fw-bold">For questions on the operation of the CTB website:</div>
-                        <div class=""><a href="mailto:ctb-support@isb-cgc.org"><i class="fas fa-envelope me-2"></i>
+                        <div class=""><a href="mailto:nciwebtools@gmail.com"><i class="fas fa-envelope me-2"></i>
                             Please contact the ISB-CGC Support Team via email</a>.
                         </div>
                     </div>
