--- a/templates/accounts/account/lockout.html
+++ b/templates/accounts/account/lockout.html
@@ -21,7 +21,7 @@
                             login attempts.
                             An account lock lasts for {{ cooloff_timedelta|duration }}.
                         </div>
-                        <div class="mt-2">Try again later, or contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
+                        <div class="mt-2">Try again later, or contact <a href="mailto:nciwebtools@gmail.com">nciwebtools@gmail.com</a>
                             for help.
                         </div>
                     </div>
