--- a/templates/ctb/privacy.html
+++ b/templates/ctb/privacy.html
@@ -34,7 +34,7 @@
                     Health (NIH) sites,
                     federal agency sites, and private organizations. Once you leave the primary CTB site, you are
                     subject to the privacy
-                    policy for the site(s) you are visiting. In addition to email address, we collect some data
+                    policy for the site(s) you are visiting. In addition to name and email address, we collect some data
                     about your visit to
                     our Web site to help us better understand how the public uses the site and how to make it more
                     helpful. We collect
@@ -58,7 +58,8 @@
                     <li>Date and time of your visit</li>
                     <li>Pages you visited</li>
                     <li>Address of the Web site that connected you to the CTB site (such as google.com or bing.com)</li>
-                    <li>Email address associated to your Account</li>
+                    <li>Email address associated to your Google Account</li>
+                    <li>Name (as available in your Google Account profile)</li>
                     <li>Information about what datasets are visited, linked to the IP address used to visit it</li>
                     <li>Information about the datasets that were accessed from Google Cloud Storage requester pays, and
                         the associated IP address, and Collection ID
@@ -77,8 +78,9 @@
                     Analytics and
                     StackDriver gather information automatically and continuously. No Personally Identifiable
                     Information (PII) is
-                    collected from these two systems. When you log in to our CTB site,
-                    we collect your email address. CTB
+                    collected from these two systems. When you log in to our CTB site using a Google Account or a
+                    personal email,
+                    we collect your email address and name (as stored in your Google Account profile if applicable). CTB
                     staff
                     conducts analyses and reports on the aggregated data, and those reports are only available to the
                     NCI and NIH.
