--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -53,8 +53,8 @@
                                         Applications must be approved before any samples can be released.
                                     </p>
                                     <p>If you have any queries, please email these to <a
-                                            href="mailto:ctb-support@isb-cgc.org"
-                                            target="_top">ctb-support@isb-cgc.org</a>.
+                                            href="mailto:nciwebtools@gmail.com"
+                                            target="_top">nciwebtools@gmail.com</a>.
                                     </p>
                                 </div>
                             </div>
