--- a/templates/two_factor/core/login.html
+++ b/templates/two_factor/core/login.html
@@ -31,7 +31,7 @@
                                 {% if form.non_field_errors %}
                                     <div role="alert" class="alert alert-primary">
                                         {{ form.non_field_errors }}
-                                        <div class="small ms-2">Can't sign in? Contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
+                                        <div class="small ms-2">Can't sign in? Contact <a href="mailto:nciwebtools@gmail.com">nciwebtools@gmail.com</a>
                                             for help.
                                         </div>
                                     </div>
