update frontend email to ctbWebAdmin@mail.nih.gov

--- a/templates/accounts/account/account_inactive.html
+++ b/templates/accounts/account/account_inactive.html
@@ -20,7 +20,7 @@
                             If you would like to reactivate your account or need more information regarding CTB policies
                             on
                             accounts, please contact <a
-                                href="mailto:nciwebtools@gmail.com">nciwebtools@gmail.com</a>.
+                                href="mailto:ctbWebAdmin@mail.nih.gov">ctbWebAdmin@mail.nih.gov</a>.
                         </div>
                     </div>
                 </div>
