--- a/templates/accounts/account/verification_sent.html
+++ b/templates/accounts/account/verification_sent.html
@@ -28,7 +28,7 @@
                                 additional
                                 e-mails.</p>
                             <p>If the verification e-mail still doesn't come through, <b><a
-                                    href="mailto:nciwebtools@gmail.com">contact us</a></b>
+                                    href="mailto:ctbWebAdmin@mail.nih.gov">contact us</a></b>
                                 from your account's registered email address for assistance.</p>
                         </div>
                     </form>
