--- a/templates/donors/application_post_submit.html
+++ b/templates/donors/application_post_submit.html
@@ -26,7 +26,7 @@
         {% if error %}
             <div class="p-3 mb-2 rounded-2 border border-2 border-warning">
                 <i class="fa-solid fa-circle-exclamation text-secondary"></i> There was an error while submitting
-                your application. Please try again or contact <a href="mailto:nciwebtools@gmail.com">nciwebtools@gmail.com</a>
+                your application. Please try again or contact <a href="mailto:ctbWebAdmin@mail.nih.gov">ctbWebAdmin@mail.nih.gov</a>
                 if you have any questions.
                 <div class="font-monospace text-muted bg-light rounded-2 p-2 mt-2 small">[ERROR] {{ error }}</div>
             </div>
