--- a/templates/accounts/account/email_confirmed.html
+++ b/templates/accounts/account/email_confirmed.html
@@ -21,7 +21,7 @@
                         <div class="mt-3"><b>
                             Please Note: Your account application will need to be evaluated before an account can be approved. You will get an email about approval.
                             If you have any questions, please email us at <a
-                                    href='mailto:nciwebtools@gmail.com'>nciwebtools@gmail.com.</a></b></div>
+                                    href='mailto:ctbWebAdmin@mail.nih.gov'>ctbWebAdmin@mail.nih.gov.</a></b></div>
                     </div>
                 </div>
             </div>
