--- a/templates/accounts/account/signup.html
+++ b/templates/accounts/account/signup.html
@@ -24,7 +24,7 @@
                                 <div role="alert" class="alert alert-primary">
                                     {{ form.non_field_errors }}
                                     <div class="small ms-2">Unable to register? Contact <a
-                                            href="mailto:nciwebtools@gmail.com">nciwebtools@gmail.com</a>
+                                            href="mailto:ctbWebAdmin@mail.nih.gov">ctbWebAdmin@mail.nih.gov</a>
                                         for help.
                                     </div>
                                 </div>
