--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -168,7 +168,7 @@
                         </div>
                         <div>
                             <div class="">For questions on the operation of the CTB website:</div>
-                            <div class="pb-3"><a href="mailto:nciwebtools@gmail.com"><i class="fas fa-envelope me-2"></i>
+                            <div class="pb-3"><a href="mailto:ctbWebAdmin@mail.nih.gov"><i class="fas fa-envelope me-2"></i>
                                 Please contact the ISB-CGC Support Team via email</a>.
                             </div>
                         </div>
