--- a/templates/donors/intake_form.html
+++ b/templates/donors/intake_form.html
@@ -32,7 +32,7 @@
                 information into this form (such as institutional points of contact used in public publications). DO
                 NOT add private contact information here. This information will not be made available to the public.
                 If you need to update the contact information while the application is being processed, please email us
-                at <a href="mailto:nciwebtools@gmail.com">nciwebtools@gmail.com</a>.
+                at <a href="mailto:ctbWebAdmin@mail.nih.gov">ctbWebAdmin@mail.nih.gov</a>.
                 <div class="form-check mt-2">
                 <input class="form-check-input" type="checkbox" value="" id="pii-warning-check" required>
                 <label class="form-check-label fw-bold" for="pii-warning-check">
