update ctb team in email

--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -40,7 +40,7 @@
                     <div>
                         <div class="fw-bold">For questions on the operation of the CTB website:</div>
                         <div class=""><a href="mailto:ctbWebAdmin@mail.nih.gov"><i class="fas fa-envelope me-2"></i>
-                            Please contact the ISB-CGC Support Team via email</a>.
+                            Please contact the CTB Web Support Team via email</a>.
                         </div>
                     </div>
                     <hr>
