--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -169,7 +169,7 @@
                         <div>
                             <div class="">For questions on the operation of the CTB website:</div>
                             <div class="pb-3"><a href="mailto:ctbWebAdmin@mail.nih.gov"><i class="fas fa-envelope me-2"></i>
-                                Please contact the ISB-CGC Support Team via email</a>.
+                                Please contact the CTB Web Support Team via email</a>.
                             </div>
                         </div>
                         <div>
