--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async
                 src="https://www.googletagmanager.com/gtag/js?id={{ SITE_GOOGLE_ANALYTICS_TRACKING_ID }}"></script>
-        <script src="https://assets.adobedtm.com/6a4249cd0a2c/785de09de161/launch-70d67a6a40a8.min.js" async=""></script>
+        <script async src="https://assets.adobedtm.com/6a4249cd0a2c/785de09de161/launch-70d67a6a40a8.min.js" ></script>
         <script>
             window.dataLayer = window.dataLayer || [];
 
